--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- bootstrap css -->
+        <link rel="icon" href="images/profile.png">
         <link rel = "stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
         <title>Harper Davis</title>
     </head>
@@ -28,21 +29,20 @@
         
         
         <br>
-        <div class="container">
-            <img src="images/profile.png" alt="Profile">
-        </div>
-        <br>
-        <div class="container">       
-            <p>a programmer who programs cool things</p>
-            <!-- Content here -->
-        </div>
-        <div class="container">
-            <p>© Harper Davis 2019</p>
-            <!-- Content here -->
+        <div class="container-fluid padding">
+            <div class="row text-center padding">
+                <div class="col-xs-12 col-sm-6 col-md-4"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <img src="images/profile.png" alt="Profile">
+                    <p>a programmer who programs cool things</p>
+                    <p>© Harper Davis 2019</p>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4"></div>
+            </div>
         </div>
     <!-- Bootstrap JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="styles/bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
