--- a/index.html
+++ b/index.html
@@ -5,41 +5,47 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- bootstrap css -->
-        <link rel="icon" href="images/profile.png">
-        <link rel = "stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel = "stylesheet" href="styles/main.css">
 
+        <link rel="icon" href="images/profile.png">
         <title>Harper Davis</title>
     </head>
     <body>
-        <nav class="navbar navbar-light navbar-expand-lg navbar-custom">
-            <ul class="navbar-nav">
-                <a class="navbar-brand" href="#">Harper Davis</a>
-                <li class = "nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class = "nav-item">
-                    <a class="nav-link" href="#">Projects</a>
-                </li>
-                <li class = "nav-item">
-                    <a class="nav-link" href="https://github.com/harperkdavis">Github</a>
-                <li>
-            </ul>
+        <nav class="navbar navbar-expand-md navbar-dark sticky-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><h3>Harper Davis</h3></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/harperkdavis">Github</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         
         
         <br>
         <div class="container-fluid padding">
             <div class="row text-center padding">
-                <div class="col-xs-12 col-sm-6 col-md-4"></div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-12">
                     <img src="images/profile.png" alt="Profile">
                     <p>a programmer who programs cool things</p>
                     <p>© Harper Davis 2019</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4"></div>
             </div>
         </div>
+
     <!-- Bootstrap JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
